--- a/examples/wikipedia_editing_fitness_complexity.ipynb
+++ b/examples/wikipedia_editing_fitness_complexity.ipynb
@@ -1,37 +1,10 @@
 {
   "cells": [
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "64de1c3e",
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "# Auto-install fitkit if not available (e.g., in Colab)\n",
-        "try:\n",
-        "    import fitkit\n",
-        "except ImportError:\n",
-        "    !pip install -e ..  # Install from parent directory in dev mode\n",
-        "    import fitkit"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "a9efa654",
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "from fitkit.data import WikipediaLoader, QueryConfig, create_small_fixture\n",
-        "from fitkit.algorithms import fitness_complexity, compute_eci_pci, sinkhorn_masked\n",
-        "from fitkit.algorithms import FitnessComplexity, ECI, SinkhornScaler"
-      ]
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
-        "colab_type": "text",
-        "id": "view-in-github"
+        "id": "view-in-github",
+        "colab_type": "text"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/lawrennd/fitkit/blob/main/examples/wikipedia_editing_fitness_complexity.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -105,6 +78,36 @@
     {
       "cell_type": "code",
       "execution_count": null,
+      "id": "64de1c3e",
+      "metadata": {
+        "id": "64de1c3e"
+      },
+      "outputs": [],
+      "source": [
+        "try:\n",
+        "    import fitkit\n",
+        "except ImportError:\n",
+        "    !pip install git+https://github.com/lawrennd/fitkit.git\n",
+        "    import fitkit"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "a9efa654",
+      "metadata": {
+        "id": "a9efa654"
+      },
+      "outputs": [],
+      "source": [
+        "from fitkit.data import WikipediaLoader, QueryConfig, create_small_fixture\n",
+        "from fitkit.algorithms import fitness_complexity, compute_eci_pci, sinkhorn_masked\n",
+        "from fitkit.algorithms import FitnessComplexity, ECI, SinkhornScaler"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
       "id": "4",
       "metadata": {
         "id": "4"
@@ -145,33 +148,6 @@
         ")\n",
         "\n",
         "print(\"Cache path:\", CACHE_PATH)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "6",
-      "metadata": {
-        "id": "6"
-      },
-      "outputs": [],
-      "source": [
-        "# Data loading is now handled by WikipediaLoader (imported from fitkit.data)\n",
-        "# The loader handles BigQuery authentication, querying, caching, and matrix construction\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "7",
-      "metadata": {
-        "id": "7"
-      },
-      "outputs": [],
-      "source": [
-        "# Data loading functions are now in fitkit.data.WikipediaLoader\n",
-        "# The loader handles BigQuery authentication, querying, caching, and matrix construction\n",
-        "\n"
       ]
     },
     {
@@ -240,19 +216,6 @@
         "### 3) Baseline: 1D Pietronero Fitness–Complexity fixed point\n",
         "\n",
         "This is the usual nonlinear rank-1 fixed point on the **support matrix** \\(M\\) (binary incidence). We’ll compute it as a scalar reference, then move to the rank-2 extension.\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "11",
-      "metadata": {
-        "id": "11"
-      },
-      "outputs": [],
-      "source": [
-        "# Algorithm functions are now imported from fitkit.algorithms\n",
-        "# (fitness_complexity, compute_eci_pci, sinkhorn_masked)\n"
       ]
     },
     {
@@ -897,8 +860,8 @@
   ],
   "metadata": {
     "colab": {
-      "include_colab_link": true,
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
