Add smart GCP project detection for Colab
- Auto-detect available projects when project_id not specified
- Try each project until one works with BigQuery
- Add google-cloud-resource-manager dependency
- Provide clear error messages at each step
- Improves UX: users don't need to know their project ID

--- a/examples/wikipedia_editing_fitness_complexity.ipynb
+++ b/examples/wikipedia_editing_fitness_complexity.ipynb
@@ -2,9 +2,10 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "id": "4b6e89fd",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/lawrennd/fitkit/blob/main/examples/wikipedia_editing_fitness_complexity.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -860,8 +861,8 @@
   ],
   "metadata": {
     "colab": {
-      "provenance": [],
-      "include_colab_link": true
+      "include_colab_link": true,
+      "provenance": []
     },
     "kernelspec": {
       "display_name": "Python 3",
