Updated to work with library.

--- a/examples/wikipedia_editing_fitness_complexity.ipynb
+++ b/examples/wikipedia_editing_fitness_complexity.ipynb
@@ -2,10 +2,9 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "id": "4b6e89fd",
       "metadata": {
-        "colab_type": "text",
-        "id": "view-in-github"
+        "id": "view-in-github",
+        "colab_type": "text"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/lawrennd/fitkit/blob/main/examples/wikipedia_editing_fitness_complexity.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -297,18 +296,6 @@
         "print(word_scores_1d.head(20))\n",
         "print(\"Top 20 users by fitness:\")\n",
         "print(user_scores_1d.head(20))"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "15",
-      "metadata": {
-        "id": "15"
-      },
-      "outputs": [],
-      "source": [
-        "user_scores_1d.head(15)"
       ]
     },
     {
@@ -861,8 +848,8 @@
   ],
   "metadata": {
     "colab": {
-      "include_colab_link": true,
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
