--- a/examples/wikipedia_editing_fitness_complexity.ipynb
+++ b/examples/wikipedia_editing_fitness_complexity.ipynb
@@ -12,6 +12,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1",
    "metadata": {
     "id": "1"
    },
@@ -22,11 +23,11 @@
     "\n",
     "- Downloads a sample of Wikipedia users from BigQuery and aggregates their edits into per-user text.\n",
     "- Builds a `user` $\\times$ `word` matrix and its *support* (analogous to `country` $\\times$ `product`).\n"
-   ],
-   "id": "1"
+   ]
   },
   {
    "cell_type": "markdown",
+   "id": "2",
    "metadata": {
     "id": "2"
    },
@@ -58,58 +59,60 @@
     "    This will authenticate you and allow the `WikipediaLoader` to access BigQuery using your credentials.\n",
     "\n",
     "Once these steps are complete, you should be able to run the BigQuery cells successfully!"
-   ],
-   "id": "2"
+   ]
   },
   {
    "cell_type": "markdown",
+   "id": "3",
    "metadata": {
     "id": "3"
    },
    "source": [
     "### 0) Setup\n",
     "\n",
-    "You\u2019ll need BigQuery credentials configured locally (e.g. `gcloud auth application-default login`) and permission to access the public dataset `fh-bigquery.reddit_comments`.\n",
+    "You’ll need BigQuery credentials configured locally (e.g. `gcloud auth application-default login`) and permission to access the public dataset `fh-bigquery.reddit_comments`.\n",
     "\n",
-    "If you don\u2019t have BigQuery access, you can still run the later cells by loading a cached dataframe (see the caching cell below).\n"
-   ],
-   "id": "3"
+    "If you don’t have BigQuery access, you can still run the later cells by loading a cached dataframe (see the caching cell below).\n"
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "64de1c3e",
    "metadata": {
     "id": "64de1c3e"
    },
+   "outputs": [],
    "source": [
     "try:\n",
     "    import fitkit\n",
     "except ImportError:\n",
     "    !pip install git+https://github.com/lawrennd/fitkit.git\n",
     "    import fitkit"
-   ],
-   "execution_count": null,
-   "outputs": [],
-   "id": "64de1c3e"
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "a9efa654",
    "metadata": {
     "id": "a9efa654"
    },
+   "outputs": [],
    "source": [
     "from fitkit.data import WikipediaLoader, QueryConfig, create_small_fixture\n",
     "from fitkit.algorithms import FitnessComplexity, ECI, SinkhornScaler\n",
     "from fitkit.algorithms import fitness_complexity, compute_eci_pci, sinkhorn_masked  # functional API also available"
-   ],
-   "execution_count": null,
-   "outputs": [],
-   "id": "a9efa654"
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "4",
    "metadata": {
     "id": "4"
    },
+   "outputs": [],
    "source": [
     "# Core\n",
     "import os\n",
@@ -121,16 +124,16 @@
     "\n",
     "# Plotting\n",
     "import matplotlib.pyplot as plt\n"
-   ],
-   "execution_count": null,
-   "outputs": [],
-   "id": "4"
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "5",
    "metadata": {
     "id": "5"
    },
+   "outputs": [],
    "source": [
     "# Standard random sampling (no specific users)\n",
     "cfg = QueryConfig()\n",
@@ -145,16 +148,16 @@
     ")\n",
     "\n",
     "print(\"Cache path:\", CACHE_PATH)"
-   ],
-   "execution_count": null,
-   "outputs": [],
-   "id": "5"
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "8",
    "metadata": {
     "id": "8"
    },
+   "outputs": [],
    "source": [
     "# Load data using WikipediaLoader\n",
     "print(f\"Using cache path: {CACHE_PATH}\")\n",
@@ -170,16 +173,16 @@
     "print(f\"Loaded: {len(user_ids)} users, {len(vocab)} words\")\n",
     "print(f\"Matrix shape: {X.shape}, dtype: {X.dtype}\")\n",
     "print(f\"Matrix is sparse: {sp.issparse(X)}\")"
-   ],
-   "execution_count": null,
-   "outputs": [],
-   "id": "8"
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "9",
    "metadata": {
     "id": "9"
    },
+   "outputs": [],
    "source": [
     "# 2) Extract support matrix and prepare for analysis\n",
     "#\n",
@@ -201,56 +204,56 @@
     "\n",
     "# Labeled view for plotting and downstream helpers\n",
     "M_df = pd.DataFrame.sparse.from_spmatrix(M, index=user_ids, columns=vocab)"
-   ],
-   "execution_count": null,
-   "outputs": [],
-   "id": "9"
+   ]
   },
   {
    "cell_type": "markdown",
+   "id": "10",
    "metadata": {
     "id": "10"
    },
    "source": [
-    "### 3) Baseline: 1D Pietronero Fitness\u2013Complexity fixed point\n",
+    "### 3) Baseline: 1D Pietronero Fitness–Complexity fixed point\n",
     "\n",
-    "This is the usual nonlinear rank-1 fixed point on the **support matrix** \\(M\\) (binary incidence). We\u2019ll compute it as a scalar reference, then move to the rank-2 extension.\n"
-   ],
-   "id": "10"
+    "This is the usual nonlinear rank-1 fixed point on the **support matrix** \\(M\\) (binary incidence). We’ll compute it as a scalar reference, then move to the rank-2 extension.\n"
+   ]
   },
   {
    "cell_type": "markdown",
+   "id": "12",
    "metadata": {
     "id": "12"
    },
    "source": [
-    "### Fitness\u2013Complexity \u21c4 IPF/Sinkhorn equivalence (what the paper is using)\n",
+    "### Fitness–Complexity ⇄ IPF/Sinkhorn equivalence (what the paper is using)\n",
     "\n",
-    "In the paper (`economic-fitness.tex`), the key point is that **Fitness\u2013Complexity is a reparameterisation of masked IPF/Sinkhorn matrix scaling** on the support graph.\n",
+    "In the paper (`economic-fitness.tex`), the key point is that **Fitness–Complexity is a reparameterisation of masked IPF/Sinkhorn matrix scaling** on the support graph.\n",
     "\n",
     "- We solve for a coupling/flow \\(w_{uw}\\ge 0\\) supported on \\(M\\) such that \\(\\sum_w w_{uw}=r_u\\) and \\(\\sum_u w_{uw}=c_w\\).\n",
     "- IPF/Sinkhorn gives a diagonal scaling solution \\(w_{uw} = M_{uw} A_u B_w\\).\n",
     "- Setting \\(A_u \\equiv 1/F_u\\) and \\(B_w \\equiv Q_w\\) yields \\(w_{uw} \\propto M_{uw} Q_w/F_u\\), and the FC fixed-point updates recover the scaling equations (up to the usual projective normalisation/gauge).\n",
     "\n",
-    "So the Sinkhorn/IPF object here is **not a different model**\u2014it\u2019s the same masked matrix-scaling problem, viewed in \u201cflow\u201d form. The only extra modelling choice is **which marginals \\((r,c)\\)** to impose (uniform is a common default in the support-only setting; data-marginals are natural for quantitative flows).\n"
-   ],
-   "id": "12"
+    "So the Sinkhorn/IPF object here is **not a different model**—it’s the same masked matrix-scaling problem, viewed in “flow” form. The only extra modelling choice is **which marginals \\((r,c)\\)** to impose (uniform is a common default in the support-only setting; data-marginals are natural for quantitative flows).\n"
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "13",
    "metadata": {
     "id": "13"
    },
-   "source": [],
-   "execution_count": null,
    "outputs": [],
-   "id": "13"
+   "source": []
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "14",
    "metadata": {
     "id": "14"
    },
+   "outputs": [],
    "source": [
     "# Use sklearn-style estimators\n",
     "fc = FitnessComplexity()\n",
@@ -269,7 +272,7 @@
     "kp = pd.Series(np.asarray(M.sum(axis=0)).ravel(), index=vocab, name=\"ubiquity_kp\")\n",
     "\n",
     "# Sinkhorn/IPF scaling to build a flow W on the support.\n",
-    "# For the FC \u21c4 Sinkhorn equivalence viewpoint, the natural default is *uniform* marginals.\n",
+    "# For the FC ⇄ Sinkhorn equivalence viewpoint, the natural default is *uniform* marginals.\n",
     "# However, uniform marginals can be infeasible on some sparse masks; we fall back if needed.\n",
     "\n",
     "# default: uniform marginals (same total mass, different per-node mass if rectangular)\n",
@@ -302,13 +305,11 @@
     "print(word_scores_1d.head(20))\n",
     "print(\"Top 20 users by fitness:\")\n",
     "print(user_scores_1d.head(20))"
-   ],
-   "execution_count": null,
-   "outputs": [],
-   "id": "14"
+   ]
   },
   {
    "cell_type": "markdown",
+   "id": "16",
    "metadata": {
     "id": "16"
    },
@@ -317,24 +318,26 @@
     "\n",
     "The objects we visualise here are:\n",
     "\n",
-    "- binary support: `M` (country\u00d7product)\n",
+    "- binary support: `M` (country×product)\n",
     "- Sinkhorn/IPF scaling factors: `u`, `v` (dual variables)\n",
     "- coupling / feasible flow: `W` where `W = diag(u) * M * diag(v)` (on the support)\n",
     "\n",
-    "To avoid \u201chairballs\u201d, every flow plot below supports **top-k / top-edge filtering**."
-   ],
-   "id": "16"
+    "To avoid “hairballs”, every flow plot below supports **top-k / top-edge filtering**."
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "17",
    "metadata": {
     "id": "17"
    },
+   "outputs": [],
    "source": [
     "# Diagnostics: convergence\n",
     "fig, ax = plt.subplots(1, 2, figsize=(10, 3))\n",
-    "ax[0].plot(fc.history_[\"dF\"], label=\"max |\u0394F|\")\n",
-    "ax[0].plot(fc.history_[\"dQ\"], label=\"max |\u0394Q|\")\n",
+    "ax[0].plot(fc.history_[\"dF\"], label=\"max |ΔF|\")\n",
+    "ax[0].plot(fc.history_[\"dQ\"], label=\"max |ΔQ|\")\n",
     "ax[0].set_yscale(\"log\")\n",
     "ax[0].set_title(\"FC convergence\")\n",
     "ax[0].legend()\n",
@@ -365,18 +368,17 @@
     "plt.ylabel(\"Fitness\")\n",
     "plt.title(\"Countries: Fitness vs ECI\")\n",
     "plt.tight_layout()\n",
-    "plt.show()\n",
-    ""
-   ],
-   "execution_count": null,
-   "outputs": [],
-   "id": "17"
+    "plt.show()\n"
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "k81TRoZ5ij4F",
    "metadata": {
     "id": "k81TRoZ5ij4F"
    },
+   "outputs": [],
    "source": [
     "from fitkit.diagnostics import (\n",
     "    plot_circular_bipartite_flow,\n",
@@ -414,29 +416,29 @@
     "fig.update_traces(marker=dict(size=8))\n",
     "fig.update_layout(width=700, height=500)\n",
     "\n"
-   ],
-   "execution_count": null,
-   "outputs": [],
-   "id": "k81TRoZ5ij4F"
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "18",
    "metadata": {
     "id": "18"
    },
+   "outputs": [],
    "source": [
     "# Plotting functions have been moved to fitkit.diagnostics\n",
     "# Import them from the module instead (see cell above)\n"
-   ],
-   "execution_count": null,
-   "outputs": [],
-   "id": "18"
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "19",
    "metadata": {
     "id": "19"
    },
+   "outputs": [],
    "source": [
     "# Build a labeled coupling DataFrame\n",
     "W_df = _to_flow_df(M_df, W)\n",
@@ -475,24 +477,22 @@
     "# 4) Ranked barcode plots\n",
     "plot_ranked_barcodes(results_countries, results_products, top_n=40)\n",
     "\n"
-   ],
-   "execution_count": null,
-   "outputs": [],
-   "id": "19"
+   ]
   },
   {
    "cell_type": "markdown",
+   "id": "3904e239",
    "metadata": {
     "id": "3904e239"
    },
    "source": [
     "# Task\n",
     "Explain that the interactive plot with log scale and clickable dots is ready."
-   ],
-   "id": "3904e239"
+   ]
   },
   {
    "cell_type": "markdown",
+   "id": "ba7ff9ca",
    "metadata": {
     "id": "ba7ff9ca"
    },
@@ -501,11 +501,11 @@
     "\n",
     "### Subtask:\n",
     "Explain the features of the generated interactive plot.\n"
-   ],
-   "id": "ba7ff9ca"
+   ]
   },
   {
    "cell_type": "markdown",
+   "id": "942eccd4",
    "metadata": {
     "id": "942eccd4"
    },
@@ -520,8 +520,7 @@
     "### Insights or Next Steps\n",
     "- Utilize the interactive click functionality to investigate specific outliers or high-leverage points within the data.\n",
     "- The logarithmic scale suggests the underlying data likely follows a power-law distribution or contains significant skewness; consider this when performing further statistical tests.\n"
-   ],
-   "id": "942eccd4"
+   ]
   }
  ],
  "metadata": {
