Fix nested matrix dimensions to prevent ECI dropping words
Adjusted matrix generation to ensure all words are used:
- Set n_words = n_users + base_words - 1 (204 words for 200 users)
- This prevents ECI from dropping isolated words (zero ubiquity)
- Last user now uses all words, creating perfect nesting

Fixes ValueError: Length of values (204) does not match length of index (300)
The issue was that words 204-299 were never used and got dropped by ECI.

--- a/examples/nested_matrix_fitness_complexity.ipynb
+++ b/examples/nested_matrix_fitness_complexity.ipynb
@@ -127,8 +127,10 @@
     "\n",
     "# Matrix parameters\n",
     "n_users = 200\n",
-    "n_words = 300\n",
     "base_words = 5  # Minimum words per user\n",
+    "# To ensure all words are used: n_words = n_users + base_words - 1\n",
+    "# This way the last user (i=n_users-1) uses words 0 through n_words-1\n",
+    "n_words = n_users + base_words - 1  # = 204\n",
     "\n",
     "# Generate perfectly nested matrix\n",
     "# User i uses words 0 through min(i + base_words, n_words)\n",
@@ -150,7 +152,9 @@
     "print(f\"Matrix shape: {M.shape}, dtype: {M.dtype}\")\n",
     "print(f\"Density: {M.nnz / (M.shape[0] * M.shape[1]):.2%}\")\n",
     "print(f\"Total non-zero entries: {M.nnz}\")\n",
-    "print(f\"Diversification range: [{M.sum(axis=1).min():.0f}, {M.sum(axis=1).max():.0f}]\")"
+    "print(f\"Diversification range: [{M.sum(axis=1).min():.0f}, {M.sum(axis=1).max():.0f}]\")\n",
+    "print(f\"Ubiquity range: [{M.sum(axis=0).min():.0f}, {M.sum(axis=0).max():.0f}]\")\n",
+    "print(f\"All words used: {(M.sum(axis=0) > 0).all()}\")"
    ]
   },
   {
