Revert nested matrix to 200×300 dimensions
Now that ECI properly handles isolated nodes with NaN values and warnings,
we can use more flexible dimensions (200 users × 300 words).

- Words 204-299 will be isolated (never used)
- ECI will warn about 96 isolated words
- Output will have NaN for these words (no error!)
- Demonstrates the improved ECI error handling

This shows the fix working in practice: users get a clear warning instead
of a confusing ValueError about dimension mismatch.

--- a/examples/nested_matrix_fitness_complexity.ipynb
+++ b/examples/nested_matrix_fitness_complexity.ipynb
@@ -127,13 +127,12 @@
     "\n",
     "# Matrix parameters\n",
     "n_users = 200\n",
+    "n_words = 300  # More words than users to create interesting structure\n",
     "base_words = 5  # Minimum words per user\n",
-    "# To ensure all words are used: n_words = n_users + base_words - 1\n",
-    "# This way the last user (i=n_users-1) uses words 0 through n_words-1\n",
-    "n_words = n_users + base_words - 1  # = 204\n",
     "\n",
     "# Generate perfectly nested matrix\n",
     "# User i uses words 0 through min(i + base_words, n_words)\n",
+    "# Note: Words beyond (n_users + base_words - 1) will be unused (isolated)\n",
     "M_data = []\n",
     "for i in range(n_users):\n",
     "    row = np.zeros(n_words)\n",
@@ -148,13 +147,18 @@
     "user_ids = [f\"user_{i:03d}\" for i in range(n_users)]\n",
     "vocab = [f\"word_{i:03d}\" for i in range(n_words)]\n",
     "\n",
+    "n_words_used = min(n_users + base_words - 1, n_words)\n",
+    "n_words_isolated = n_words - n_words_used\n",
+    "\n",
     "print(f\"Generated nested matrix: {n_users} users × {n_words} words\")\n",
     "print(f\"Matrix shape: {M.shape}, dtype: {M.dtype}\")\n",
     "print(f\"Density: {M.nnz / (M.shape[0] * M.shape[1]):.2%}\")\n",
     "print(f\"Total non-zero entries: {M.nnz}\")\n",
     "print(f\"Diversification range: [{M.sum(axis=1).min():.0f}, {M.sum(axis=1).max():.0f}]\")\n",
     "print(f\"Ubiquity range: [{M.sum(axis=0).min():.0f}, {M.sum(axis=0).max():.0f}]\")\n",
-    "print(f\"All words used: {(M.sum(axis=0) > 0).all()}\")"
+    "print(f\"Words used: {n_words_used}/{n_words} (isolated: {n_words_isolated})\")\n",
+    "if n_words_isolated > 0:\n",
+    "    print(f\"Note: {n_words_isolated} words will have NaN values in ECI output (expected)\")"
    ]
   },
   {
@@ -457,7 +461,7 @@
     "print(\"SUMMARY STATISTICS\")\n",
     "print(\"=\" * 60)\n",
     "print(f\"\\nMatrix size: {n_users} users × {n_words} words\")\n",
-    "print(f\"Matrix type: PERFECTLY NESTED\")\n",
+    "print(f\"Matrix type: perfectly nested\")\n",
     "print(f\"Density: {M.nnz / (M.shape[0] * M.shape[1]):.2%}\")\n",
     "print(f\"\\nFitness-Complexity converged: {fc_hist.get('converged', False)}\")\n",
     "print(f\"FC iterations: {len(fc_hist['dF'])}\")\n",
