Use log(Fitness) for meaningful correlations with ECI and diversification
- Updated test_eci_vs_fitness_comparison.py to use log(Fitness) throughout
- Updated both example notebooks (nested and random matrix) to compute and plot log(Fitness)
- Updated ECI diagnostic reports to reflect log(Fitness) comparisons
- Key insight: Fitness is multiplicative/exponential, so log(Fitness) is the appropriate
  scale for correlation with linear measures (ECI, diversification)
- Results show log(Fitness) correlates ~0.99 with diversification across all matrix types
- ECI remains highly structure-dependent (works on nested, struggles on random)

--- a/examples/random_matrix_fitness_complexity.ipynb
+++ b/examples/random_matrix_fitness_complexity.ipynb
@@ -4,26 +4,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a href=\"https://colab.research.google.com/github/lawrennd/fitkit/blob/main/examples/nested_matrix_fitness_complexity.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+    "<a href=\"https://colab.research.google.com/github/lawrennd/fitkit/blob/main/examples/random_matrix_fitness_complexity.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Nested Matrix: Fitness / Complexity Analysis\n",
+    "## Random Matrix: Fitness / Complexity Analysis\n",
     "\n",
-    "This notebook demonstrates fitness-complexity analysis on a **perfectly nested binary matrix**.\n",
+    "This notebook demonstrates fitness-complexity analysis on a **randomly sampled binary matrix**.\n",
     "\n",
-    "**Hypothesis**: For nested data (countries with more products export all products that countries with fewer products export, plus additional ones), we expect **ECI to correlate very highly with diversification** (r > 0.9) since this is the use case ECI was designed for. We also expect **very high ECI-log(Fitness) correlation** (r > 0.9) since both metrics should capture the nested structure. Note: we use log(Fitness) because Fitness is multiplicative/exponential, while ECI and diversification are linear scales.\n",
-    "\n",
-    "**What is a nested matrix?** In a perfectly nested structure:\n",
-    "- Row i includes all products from rows 0 to i-1, plus one additional product\n",
-    "- This creates a triangular/hierarchical pattern\n",
-    "- Common in trade data: sophisticated countries export everything simple countries export, plus more\n",
+    "**Hypothesis**: For random data (no underlying structure), ECI struggles to find meaningful patterns (becomes noise-like) while log(Fitness) remains meaningful by correlating strongly with diversification. We expect **low ECI-log(Fitness) correlation** (r < 0.2) and **very high log(Fitness)-diversification correlation** (r > 0.95). Note: we use log(Fitness) because Fitness is multiplicative/exponential, while ECI and diversification are linear scales.\n",
     "\n",
     "The notebook:\n",
-    "- Generates a nested sparse binary matrix (users × words)\n",
+    "- Generates a random sparse binary matrix (users × words)\n",
     "- Applies Fitness-Complexity, ECI, and Sinkhorn scaling\n",
     "- Visualizes the correlation between ECI and Fitness\n",
     "- Compares convergence and diagnostic plots"
@@ -108,12 +103,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Generate Nested Binary Matrix\n",
+    "### Generate Random Binary Matrix\n",
     "\n",
-    "We create a perfectly nested sparse binary matrix representing a user × word incidence matrix.\n",
+    "We create a random sparse binary matrix representing a user × word incidence matrix.\n",
     "- `n_users`: number of users (rows)\n",
     "- `n_words`: number of words (columns)\n",
-    "- Each user i uses words 0 through (i + base_words), creating perfect nesting"
+    "- `density`: probability that a user has used a word"
    ]
   },
   {
@@ -122,43 +117,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Random seed for reproducibility (for any randomness in ordering)\n",
+    "# Random seed for reproducibility\n",
     "np.random.seed(42)\n",
     "\n",
     "# Matrix parameters\n",
     "n_users = 200\n",
-    "n_words = 300  # More words than users to create interesting structure\n",
-    "base_words = 5  # Minimum words per user\n",
+    "n_words = 300\n",
+    "density = 0.15  # 15% density (sparse)\n",
     "\n",
-    "# Generate perfectly nested matrix\n",
-    "# User i uses words 0 through min(i + base_words, n_words)\n",
-    "# Note: Words beyond (n_users + base_words - 1) will be unused (isolated)\n",
-    "M_data = []\n",
-    "for i in range(n_users):\n",
-    "    row = np.zeros(n_words)\n",
-    "    # Each user includes all previous users' words, plus one more\n",
-    "    n_words_for_user = min(i + base_words, n_words)\n",
-    "    row[:n_words_for_user] = 1\n",
-    "    M_data.append(row)\n",
-    "\n",
-    "M = sp.csr_matrix(np.array(M_data))\n",
+    "# Generate random binary matrix\n",
+    "M = sp.random(n_users, n_words, density=density, format='csr', random_state=42)\n",
+    "M.data = np.ones_like(M.data)  # Make it binary\n",
     "\n",
     "# Create labels\n",
     "user_ids = [f\"user_{i:03d}\" for i in range(n_users)]\n",
     "vocab = [f\"word_{i:03d}\" for i in range(n_words)]\n",
     "\n",
-    "n_words_used = min(n_users + base_words - 1, n_words)\n",
-    "n_words_isolated = n_words - n_words_used\n",
-    "\n",
-    "print(f\"Generated nested matrix: {n_users} users × {n_words} words\")\n",
+    "print(f\"Generated matrix: {n_users} users × {n_words} words\")\n",
     "print(f\"Matrix shape: {M.shape}, dtype: {M.dtype}\")\n",
     "print(f\"Density: {M.nnz / (M.shape[0] * M.shape[1]):.2%}\")\n",
-    "print(f\"Total non-zero entries: {M.nnz}\")\n",
-    "print(f\"Diversification range: [{M.sum(axis=1).min():.0f}, {M.sum(axis=1).max():.0f}]\")\n",
-    "print(f\"Ubiquity range: [{M.sum(axis=0).min():.0f}, {M.sum(axis=0).max():.0f}]\")\n",
-    "print(f\"Words used: {n_words_used}/{n_words} (isolated: {n_words_isolated})\")\n",
-    "if n_words_isolated > 0:\n",
-    "    print(f\"Note: {n_words_isolated} words will have NaN values in ECI output (expected)\")"
+    "print(f\"Total non-zero entries: {M.nnz}\")"
    ]
   },
   {
@@ -291,12 +269,7 @@
    "source": [
     "### Fitness vs ECI Correlation\n",
     "\n",
-    "**Key result**: For nested matrices, we expect:\n",
-    "- **Very high correlation** between ECI and diversification (r > 0.9) - this is ECI's design use case\n",
-    "- **Very high correlation** between ECI and log(Fitness) (r > 0.9) - both capture nested structure\n",
-    "- ECI should work excellently on this structured data\n",
-    "\n",
-    "**Note**: We use log(Fitness) for correlation because Fitness is a multiplicative/exponential quantity, while ECI and diversification are on linear scales."
+    "**Key result**: For random matrices, we expect ECI and Fitness to be highly correlated because there's no meaningful nested or modular structure that would cause them to diverge."
    ]
   },
   {
@@ -320,7 +293,7 @@
     "            s=30, alpha=0.6, edgecolors='k', linewidths=0.5)\n",
     "plt.xlabel(\"ECI (standardised)\", fontsize=12)\n",
     "plt.ylabel(\"log(Fitness)\", fontsize=12)\n",
-    "plt.title(f\"Nested Matrix: log(Fitness) vs ECI\\n(Correlation: {correlation_logF:.4f})\", fontsize=13)\n",
+    "plt.title(f\"Random Matrix: log(Fitness) vs ECI\\n(Correlation: {correlation_logF:.4f})\", fontsize=13)\n",
     "plt.grid(True, alpha=0.3)\n",
     "plt.tight_layout()\n",
     "plt.show()\n",
@@ -331,7 +304,7 @@
     "            s=30, alpha=0.6, edgecolors='k', linewidths=0.5)\n",
     "plt.xlabel(\"ECI (standardised)\", fontsize=12)\n",
     "plt.ylabel(\"Fitness (log scale)\", fontsize=12)\n",
-    "plt.title(f\"Nested Matrix: Fitness vs ECI (log scale)\\n(Note: correlation computed on log(Fitness): {correlation_logF:.4f})\", fontsize=13)\n",
+    "plt.title(f\"Random Matrix: Fitness vs ECI (log scale)\\n(Note: correlation computed on log(Fitness): {correlation_logF:.4f})\", fontsize=13)\n",
     "plt.yscale('log')\n",
     "plt.grid(True, alpha=0.3)\n",
     "plt.tight_layout()\n",
@@ -360,7 +333,7 @@
     "plt.imshow(M_sorted.sparse.to_dense().to_numpy(), \n",
     "           aspect=\"auto\", interpolation=\"nearest\", cmap=\"Greys\")\n",
     "plt.colorbar(label=\"Presence (binary)\")\n",
-    "plt.title(\"Nested Matrix sorted by Fitness (rows) and Complexity (cols)\\nNote the triangular (nested) pattern\")\n",
+    "plt.title(\"Random Matrix sorted by Fitness (rows) and Complexity (cols)\")\n",
     "plt.xlabel(\"Words (sorted by Complexity)\")\n",
     "plt.ylabel(\"Users (sorted by Fitness)\")\n",
     "plt.tight_layout()\n",
@@ -424,6 +397,11 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -468,21 +446,20 @@
     "print(\"SUMMARY STATISTICS\")\n",
     "print(\"=\" * 60)\n",
     "print(f\"\\nMatrix size: {n_users} users × {n_words} words\")\n",
-    "print(f\"Matrix type: perfectly nested\")\n",
     "print(f\"Density: {M.nnz / (M.shape[0] * M.shape[1]):.2%}\")\n",
     "print(f\"\\nFitness-Complexity converged: {fc_hist.get('converged', False)}\")\n",
     "print(f\"FC iterations: {len(fc_hist['dF'])}\")\n",
     "print(f\"\\nSinkhorn converged: {sk_hist.get('converged', False)}\")\n",
     "print(f\"Sinkhorn iterations: {len(sk_hist['dr'])}\")\n",
-    "print(f\"\\n{'Correlation between ECI and Diversification:':<45} {results_users['ECI'].corr(results_users['diversification_kc']):.4f}\")\n",
-    "print(f\"{'Correlation between log(Fitness) and Diversification:':<45} {results_users['log_Fitness'].corr(results_users['diversification_kc']):.4f}\")\n",
-    "print(f\"{'Correlation between log(Fitness) and ECI:':<45} {correlation_logF:.4f}\")\n",
+    "print(f\"\\n{'Correlation between log(Fitness) and ECI:':<45} {correlation_logF:.4f}\")\n",
     "print(f\"{'Correlation between log(Complexity) and PCI:':<45} {np.log(results_words['Complexity']).corr(results_words['PCI']):.4f}\")\n",
+    "print(f\"{'Correlation between log(Fitness) and Diversification:':<45} {results_users['log_Fitness'].corr(results_users['diversification_kc']):.4f}\")\n",
+    "print(f\"{'Correlation between ECI and Diversification:':<45} {results_users['ECI'].corr(results_users['diversification_kc']):.4f}\")\n",
     "print(\"\\n\" + \"=\" * 60)\n",
-    "print(\"For NESTED matrices (ECI's design use case):\")\n",
-    "print(\"- ECI ↔ Diversification should be VERY HIGH (r > 0.9) ✓\")\n",
-    "print(\"- log(Fitness) ↔ ECI should be VERY HIGH (r > 0.9) ✓\")\n",
-    "print(\"- Both metrics capture the nested structure excellently!\")\n",
+    "print(\"For RANDOM matrices (no structure):\")\n",
+    "print(\"- ECI struggles and becomes noise-like (low correlation with diversification)\")\n",
+    "print(\"- log(Fitness) remains meaningful (high correlation with diversification)\")\n",
+    "print(\"- ECI-log(Fitness) correlation is LOW (they disagree on random data)\")\n",
     "print(\"- Note: log(Fitness) used for meaningful comparison (Fitness is multiplicative)\")\n",
     "print(\"=\" * 60)"
    ]
