--- a/examples/wikipedia_editing_fitness_complexity.ipynb
+++ b/examples/wikipedia_editing_fitness_complexity.ipynb
@@ -12,6 +12,7 @@
     },
     {
       "cell_type": "markdown",
+      "id": "1",
       "metadata": {
         "id": "1"
       },
@@ -22,11 +23,11 @@
         "\n",
         "- Downloads a sample of Wikipedia users from BigQuery and aggregates their edits into per-user text.\n",
         "- Builds a `user` $\\times$ `word` matrix and its *support* (analogous to `country` $\\times$ `product`).\n"
-      ],
-      "id": "1"
+      ]
     },
     {
       "cell_type": "markdown",
+      "id": "2",
       "metadata": {
         "id": "2"
       },
@@ -58,11 +59,11 @@
         "    This will authenticate you and allow the `WikipediaLoader` to access BigQuery using your credentials.\n",
         "\n",
         "Once these steps are complete, you should be able to run the BigQuery cells successfully!"
-      ],
-      "id": "2"
+      ]
     },
     {
       "cell_type": "markdown",
+      "id": "3",
       "metadata": {
         "id": "3"
       },
@@ -72,14 +73,16 @@
         "You’ll need BigQuery credentials configured locally (e.g. `gcloud auth application-default login`).\n",
         "\n",
         "If you don’t have BigQuery access, you can still run the later cells by loading from the cached parquet file (see the caching cell below).\n"
-      ],
-      "id": "3"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "id": "64de1c3e",
       "metadata": {
         "id": "64de1c3e"
       },
+      "outputs": [],
       "source": [
         "import sys\n",
         "import subprocess\n",
@@ -120,30 +123,30 @@
         "import fitkit\n",
         "\n",
         "print(\"fitkit version:\", getattr(fitkit, \"__version__\", \"unknown\"))"
-      ],
-      "execution_count": null,
-      "outputs": [],
-      "id": "64de1c3e"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "id": "a9efa654",
       "metadata": {
         "id": "a9efa654"
       },
+      "outputs": [],
       "source": [
         "from fitkit.data import WikipediaLoader, QueryConfig, create_small_fixture\n",
         "from fitkit.algorithms import FitnessComplexity, ECI, SinkhornScaler\n",
         "from fitkit.algorithms import fitness_complexity, compute_eci_pci, sinkhorn_masked  # functional API also available"
-      ],
-      "execution_count": null,
-      "outputs": [],
-      "id": "a9efa654"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "id": "4",
       "metadata": {
         "id": "4"
       },
+      "outputs": [],
       "source": [
         "# Core\n",
         "import os\n",
@@ -155,16 +158,16 @@
         "\n",
         "# Plotting\n",
         "import matplotlib.pyplot as plt\n"
-      ],
-      "execution_count": null,
-      "outputs": [],
-      "id": "4"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "id": "5",
       "metadata": {
         "id": "5"
       },
+      "outputs": [],
       "source": [
         "# Standard random sampling (no specific users)\n",
         "cfg = QueryConfig()\n",
@@ -179,16 +182,16 @@
         ")\n",
         "\n",
         "print(\"Cache path:\", CACHE_PATH)"
-      ],
-      "execution_count": null,
-      "outputs": [],
-      "id": "5"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "id": "8",
       "metadata": {
         "id": "8"
       },
+      "outputs": [],
       "source": [
         "# Load data using WikipediaLoader\n",
         "print(f\"Using cache path: {CACHE_PATH}\")\n",
@@ -204,16 +207,16 @@
         "print(f\"Loaded: {len(user_ids)} users, {len(vocab)} words\")\n",
         "print(f\"Matrix shape: {X.shape}, dtype: {X.dtype}\")\n",
         "print(f\"Matrix is sparse: {sp.issparse(X)}\")"
-      ],
-      "execution_count": null,
-      "outputs": [],
-      "id": "8"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "id": "9",
       "metadata": {
         "id": "9"
       },
+      "outputs": [],
       "source": [
         "# 2) Extract support matrix and prepare for analysis\n",
         "#\n",
@@ -235,13 +238,11 @@
         "\n",
         "# Labeled view for plotting and downstream helpers\n",
         "M_df = pd.DataFrame.sparse.from_spmatrix(M, index=user_ids, columns=vocab)"
-      ],
-      "execution_count": null,
-      "outputs": [],
-      "id": "9"
+      ]
     },
     {
       "cell_type": "markdown",
+      "id": "10",
       "metadata": {
         "id": "10"
       },
@@ -249,11 +250,11 @@
         "### 3) Baseline: 1D Pietronero Fitness–Complexity fixed point\n",
         "\n",
         "This is the usual nonlinear rank-1 fixed point on the **support matrix** \\(M\\) (binary incidence). We’ll compute it as a scalar reference, then move to the rank-2 extension.\n"
-      ],
-      "id": "10"
+      ]
     },
     {
       "cell_type": "markdown",
+      "id": "12",
       "metadata": {
         "id": "12"
       },
@@ -267,24 +268,26 @@
         "- Setting \\(A_u \\equiv 1/F_u\\) and \\(B_w \\equiv Q_w\\) yields \\(w_{uw} \\propto M_{uw} Q_w/F_u\\), and the FC fixed-point updates recover the scaling equations (up to the usual projective normalisation/gauge).\n",
         "\n",
         "So the Sinkhorn/IPF object here is **not a different model**—it’s the same masked matrix-scaling problem, viewed in “flow” form. The only extra modelling choice is **which marginals \\((r,c)\\)** to impose (uniform is a common default in the support-only setting; data-marginals are natural for quantitative flows).\n"
-      ],
-      "id": "12"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "id": "13",
       "metadata": {
         "id": "13"
       },
-      "source": [],
-      "execution_count": null,
       "outputs": [],
-      "id": "13"
+      "source": []
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "id": "14",
       "metadata": {
         "id": "14"
       },
+      "outputs": [],
       "source": [
         "# Use sklearn-style estimators\n",
         "fc = FitnessComplexity()\n",
@@ -336,13 +339,11 @@
         "print(word_scores_1d.head(20))\n",
         "print(\"Top 20 users by fitness:\")\n",
         "print(user_scores_1d.head(20))"
-      ],
-      "execution_count": null,
-      "outputs": [],
-      "id": "14"
+      ]
     },
     {
       "cell_type": "markdown",
+      "id": "16",
       "metadata": {
         "id": "16"
       },
@@ -356,14 +357,16 @@
         "- coupling / feasible flow: `W` where `W = diag(u) * M * diag(v)` (on the support)\n",
         "\n",
         "To avoid “hairballs”, every flow plot below supports **top-k / top-edge filtering**."
-      ],
-      "id": "16"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "id": "17",
       "metadata": {
         "id": "17"
       },
+      "outputs": [],
       "source": [
         "# Diagnostics: convergence\n",
         "fig, ax = plt.subplots(1, 2, figsize=(10, 3))\n",
@@ -393,23 +396,44 @@
         "plt.show()\n",
         "\n",
         "# Diagnostics: compare rankings\n",
+        "# Calculate log(Fitness) for meaningful correlation with linear scales\n",
+        "results_countries[\"log_Fitness\"] = np.log(results_countries[\"Fitness\"])\n",
+        "\n",
+        "# Compute correlations\n",
+        "corr_eci_div = results_countries[\"ECI\"].corr(results_countries[\"diversification_kc\"])\n",
+        "corr_logF_div = results_countries[\"log_Fitness\"].corr(results_countries[\"diversification_kc\"])\n",
+        "corr_eci_logF = results_countries[\"ECI\"].corr(results_countries[\"log_Fitness\"])\n",
+        "\n",
+        "print(\"\\n\" + \"=\"*60)\n",
+        "print(\"CORRELATION ANALYSIS\")\n",
+        "print(\"=\"*60)\n",
+        "print(f\"Correlation(ECI, Diversification):         {corr_eci_div:.4f}\")\n",
+        "print(f\"Correlation(log(Fitness), Diversification): {corr_logF_div:.4f}\")\n",
+        "print(f\"Correlation(ECI, log(Fitness)):             {corr_eci_logF:.4f}\")\n",
+        "print(\"\\nInterpretation:\")\n",
+        "print(\"- Low ECI correlations suggest data is NOT perfectly nested\")\n",
+        "print(\"- Wikipedia word usage has 'shortcuts' that break nested structure\")\n",
+        "print(\"- log(Fitness) remains robust even on non-nested real-world data\")\n",
+        "print(\"=\"*60 + \"\\n\")\n",
+        "\n",
         "plt.figure(figsize=(5, 4))\n",
         "plt.scatter(results_countries[\"ECI\"], results_countries[\"Fitness\"], s=15, alpha=0.7)\n",
-        "plt.xlabel(\"ECI (standardized)\")\n",
+        "plt.xlabel(\"ECI (standardised)\")\n",
         "plt.ylabel(\"Fitness\")\n",
-        "plt.title(\"Countries: Fitness vs ECI\")\n",
+        "plt.title(f\"Users: Fitness vs ECI\\n(Correlation with log(Fitness): {corr_eci_logF:.3f})\")\n",
+        "plt.yscale('log')\n",
         "plt.tight_layout()\n",
         "plt.show()\n"
-      ],
-      "execution_count": null,
-      "outputs": [],
-      "id": "17"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "id": "k81TRoZ5ij4F",
       "metadata": {
         "id": "k81TRoZ5ij4F"
       },
+      "outputs": [],
       "source": [
         "from fitkit.diagnostics import (\n",
         "    plot_circular_bipartite_flow,\n",
@@ -435,10 +459,10 @@
         "    x=\"ECI\",\n",
         "    y=\"Fitness\",\n",
         "    hover_name=plot_df.index,\n",
-        "    hover_data=[\"diversification_kc\"],\n",
+        "    hover_data=[\"diversification_kc\", \"log_Fitness\"],\n",
         "    custom_data=[\"wiki_url\"],\n",
-        "    title=\"Countries: Fitness vs ECI (Click dot to open User Page)\",\n",
-        "    labels={\"ECI\": \"ECI (standardized)\", \"Fitness\": \"Fitness\"},\n",
+        "    title=f\"Users: Fitness vs ECI (Click dot to open User Page)<br>Correlation(ECI, log(Fitness)): {corr_eci_logF:.3f}\",\n",
+        "    labels={\"ECI\": \"ECI (standardised)\", \"Fitness\": \"Fitness (log scale)\"},\n",
         "    template=\"plotly_white\",\n",
         "    opacity=0.7,\n",
         "    log_y=True\n",
@@ -447,29 +471,29 @@
         "fig.update_traces(marker=dict(size=8))\n",
         "fig.update_layout(width=700, height=500)\n",
         "\n"
-      ],
-      "execution_count": null,
-      "outputs": [],
-      "id": "k81TRoZ5ij4F"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "id": "18",
       "metadata": {
         "id": "18"
       },
+      "outputs": [],
       "source": [
         "# Plotting functions have been moved to fitkit.diagnostics\n",
         "# Import them from the module instead (see cell above)\n"
-      ],
-      "execution_count": null,
-      "outputs": [],
-      "id": "18"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "id": "19",
       "metadata": {
         "id": "19"
       },
+      "outputs": [],
       "source": [
         "# Build a labeled coupling DataFrame\n",
         "W_df = _to_flow_df(M_df, W)\n",
@@ -508,36 +532,31 @@
         "# 4) Ranked barcode plots\n",
         "plot_ranked_barcodes(results_countries, results_products, top_n=40)\n",
         "\n"
-      ],
-      "execution_count": null,
-      "outputs": [],
-      "id": "19"
+      ]
     },
     {
       "cell_type": "markdown",
+      "id": "3904e239",
       "metadata": {
         "id": "3904e239"
       },
-      "source": [],
-      "id": "3904e239"
+      "source": []
     },
     {
       "cell_type": "markdown",
+      "id": "ba7ff9ca",
       "metadata": {
         "id": "ba7ff9ca"
       },
-      "source": [],
-      "id": "ba7ff9ca"
+      "source": []
     },
     {
       "cell_type": "markdown",
+      "id": "942eccd4",
       "metadata": {
         "id": "942eccd4"
       },
-      "source": [
-        ""
-      ],
-      "id": "942eccd4"
+      "source": []
     }
   ],
   "metadata": {
